Fix z-index collision
Polls modal was above tooltips

--- a/frontend/src/app/scenes/meeting-page/components/meeting/meeting.component.sass
+++ b/frontend/src/app/scenes/meeting-page/components/meeting/meeting.component.sass
@@ -214,7 +214,7 @@ div div.participant:hover
     bottom: 11%
     left: calc(50% - 175px) 
     width: 350px
-    z-index: 101
+    z-index: 2
 
 i.icon 
     opacity: 0.8
